# claude-code-kimi-groq

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  SECURITY.md  TESTING.md  proxy.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_bash_tool.py  test_utils.py  test_vfs.py
tools/: base_tool.py  bash_tool.py  ls_tool.py  read_tool.py  utils.py  vfs.py  write_tool.py
